omg plz fix ugly alignment

--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ div#details div {
 div#details img, h2 img, footer img, p img {
 	vertical-align:middle}
 	
+	
+#mc_embed_signup {
+	position:relative;}
+	
 #mc_embed_signup input {
 	font-size:1em;
 	font-family:'Source sans pro', helvetica, arial, sans-serif;}
@@ -67,7 +71,6 @@ div#details img, h2 img, footer img, p img {
 	border-radius:3px;
 	margin:0 10px;
 	width:400px !important;
-	max-width:400px;
 	background:#222;
 	border:1px solid #4e8381 !important;
 	color:#41fff8;
@@ -92,7 +95,7 @@ div#details img, h2 img, footer img, p img {
 	
 #mc_embed_signup label {
 	color:#fff;
-	font-weight:bold}
+	font-weight:bold;}
 	
 	
 /* --- MENU --------------------------------------------------------- */
